--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Tiempos+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Iowan+Old+Style&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="images/rothbard.png" />
 </head>
 <body>
 <header>
