--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="images/rothbard.png" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ9K39C4RW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'G-DJ9K39C4RW');
+    </script>
 </head>
 <body>
 <header>
