--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rothbard Self Custody</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="images/rothbard.png" />
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ9K39C4RW"></script>
     <script>
@@ -59,6 +56,8 @@
         <h2>About Us</h2>
         <p>At Rothbard, we are dedicated to providing secure solutions for holding bitcoin through multisig. As a client, you will be set up to hold your own Bitcoin keys, which means that you have absolute control over your funds. With Rothbard, you can have peace of mind knowing that your funds are safeguarded by our industry standard multisig service without having to worry if we can access your funds.</p>
     </div>
+    <div><img src="images/keystranparent.png" alt="keys" class="keys"></div>
+    
 </section>
 
 <section id="services" class="services">
