Website look update

--- a/index.html
+++ b/index.html
@@ -52,29 +52,34 @@
     </div>
 </section>
 <section id="about" class="about">
-    <div class="container">
-        <h2>About Us</h2>
-        <p>At Rothbard, we are dedicated to providing secure solutions for holding bitcoin through multisig. As a client, you will be set up to hold your own Bitcoin keys, which means that you have absolute control over your funds. With Rothbard, you can have peace of mind knowing that your funds are safeguarded by our industry standard multisig service without having to worry if we can access your funds.</p>
+    <div class="wrapped">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>At Rothbard, we are dedicated to providing secure solutions for holding bitcoin through multisig. As a client, you have absolute control over your funds by holding 2 of the 3 keys. With Rothbard, you can have peace of mind knowing that your funds are safeguarded by our industry standard multisig service.</p>
+        </div>
+        <div><img src="images/keystranparent.png" alt="keys" class="keys"></div>
     </div>
-    <div><img src="images/keystranparent.png" alt="keys" class="keys"></div>
-    
 </section>
 
 <section id="services" class="services">
-    <div class="container">
-        <h2>Our Services</h2>
-        <ul>
-            <li><h3>MULTISIG WALLET SETUP</h3><p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p></li>
-            <li><h3>SECURITY CONSULTATION</h3><p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p></li>
-            <li><h3>SIGNING KEY</h3><p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p></li>
-        </ul>
+    <div class="wrapped">
+        <div>
+            <img src="images/services.png" alt="servicepic" class="servicepic">
+        </div>
+        <div class="container">
+            <h2>Our Services</h2>
+            <ul>
+                <li><h3>MULTISIG WALLET SETUP</h3><p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p></li>
+                <li><h3>SECURITY CONSULTATION</h3><p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p></li>
+                <li><h3>SIGNING KEY</h3><p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p></li>
+            </ul>
+        </div>
     </div>
 </section>
 
 <section id="quote" class="quote">
     <div class="container">
         <h2>“There can be no truly moral choice unless that choice is made in freedom.” <br><br> - Murray Rothbard</h2>
-        <img src="images/murray-rothbard.jpg" alt="murray-rothbard" class="murray-rothbard">
     </div>
 </section>
 
