--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <section id="home" class="hero">
     <div class="overlay"></div>
     <div class="container">
-        <h1>Take Action with Rothbard</h1>
+        <h1>Take Action with <b style="color: #FF9900;">Rothbard</b></h1>
         <p>Self Custody Without the Headache.</p>
         <a href="landing.html" class="btn">Join Us</a>
     </div>
@@ -62,17 +62,12 @@
 </section>
 
 <section id="services" class="services">
-    <div class="wrapped">
-        <div>
-            <img src="images/services.png" alt="servicepic" class="servicepic">
-        </div>
-        <div class="container">
-            <h2>Our Services</h2>
-            <ul>
-                <li><h3>MULTISIG WALLET SETUP</h3><p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p></li>
-                <li><h3>SECURITY CONSULTATION</h3><p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p></li>
-                <li><h3>SIGNING KEY</h3><p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p></li>
-            </ul>
+    <div class="container">
+        <h2>Our Services</h2>
+        <div class="container2">
+            <div class="box"><img src="images/vault.png"><h3>MULTISIG WALLET SETUP</h3><p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p></div>
+            <div class="box"><img src="images/helper.png"><h3>SECURITY CONSULTATION</h3><p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p></div>
+            <div class="box"><img src="images/lock.png"><h3>SIGNING KEY</h3><p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p></div>
         </div>
     </div>
 </section>
