--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
         <div><img src="images/keystranparent.png" alt="keys" class="keys"></div>
     </div>
+    
 </section>
 
 <section id="services" class="services">
@@ -92,6 +93,12 @@
         </div>
     </div>
 </footer>
+
+<!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/rothbardhelp/30min?hide_gdpr_banner=1&background_color=052054&text_color=dbdbdb&primary_color=ffffff', text: 'Schedule Meeting', color: '#ff9900', textColor: '#ffffff', branding: undefined }); }</script>
+<!-- Calendly badge widget end -->
 
 <script src="script.js"></script>
 </body>
