--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <p> Some content on this website is used under fair use.</p>
             <a href="https://www.x.com/rothbardbtc" target="_blank"><img src="images/X.png" alt="X"></a>
         </div>
+        <div class="links">
+            <a href="privacy.html">Privacy Policy</a>
+        </div>
     </div>
 </footer>
 
