--- a/privacy.html
+++ b/privacy.html
@@ -44,7 +44,7 @@
     </header>
     <div class="privacy">
         <h1>Privacy Policy</h1>
-        <p>Effective Date: [Insert Effective Date]</p>
+        <p>Effective Date: 8/2/2024</p>
 
         <h2>1. Introduction</h2>
         <p>Welcome to rothbardbitcoin.com (“we,” “our,” “us”). We are committed to protecting your privacy and ensuring that your personal information is handled in a safe and responsible manner. This Privacy Policy outlines how we collect, use, and protect your personal information.</p>
