--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 <section id="home" class="hero">
     <div class="overlay"></div>
     <div class="container">
-        <h1>Take Action with <b style="color: #FF9900;">Rothbard</b></h1>
-        <p>Self Custody Without the Headache.</p>
-        <a href="landing.html" class="btn">Join Us</a>
+        <h1>Take Action with <a href="landing.html"><b>Rothbard</b></a></h1>
     </div>
 </section>
 <section id="about" class="about">
