--- a/index.html
+++ b/index.html
@@ -44,31 +44,85 @@
         <h1>Take Action with <a href="landing.html"><b>Rothbard</b></a></h1>
     </div>
 </section>
+
+
+<section id="takeaction" class="takeaction">
+    <div class="container">
+        <div class="title">
+            <h2>Self Custody is <span></span></h2>
+        </div>
+        <div class="wrapper">
+            <div class="info"> 
+                <img id="img1-v" src="images/half1v.jpg" class="infopic infopicv">
+                <img id="img1" src="images/half1.jpg" class="infopic">
+            </div>
+            <div class="info"> 
+                <h3>People are switching to self-custody...</h3>
+                <p>to secure their assets and retain full control, reducing the risk of hacks and fraud from third-party custodians. With increasing regulations and the threat of custodian failures, taking ownership of your private keys is crucial. Advanced wallet technology makes self-custody easier than ever, ensuring your Bitcoin stays safe and private. Don't wait—protect your Bitcoin today.</p>
+                <a href="landing.html"><h3>Take Control of Your Bitcoin</h3><img src="images/button1.png"></a>
+            </div>
+            <div class="info"> 
+                <img id="img2-v" src="images/half2v.jpg" class="infopic infopicv">
+                <img id="img2" src="images/half2.jpg" class="infopic">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
 <section id="about" class="about">
+    <h1>Our <span style="color: #FF9900;">Mission</span></h1>
     <div class="wrapped">
         <div class="container">
-            <h2>About Us</h2>
+            <h2>Self-Sovereignty</h2>
             <p>At Rothbard, we are dedicated to providing secure solutions for holding bitcoin through multisig. As a client, you have absolute control over your funds by holding 2 of the 3 keys. With Rothbard, you can have peace of mind knowing that your funds are safeguarded by our industry standard multisig service.</p>
         </div>
-        <div><img src="images/keystranparent.png" alt="keys" class="keys"></div>
+        <div class="stat"><h2>1 in <span style="color: #FF9900;">4</span></h2><h3>Americans own Bitcoin</h3><h5>As of August 2024. Adoption is increasing exponentially.</h5><h6>sited from Bitcoin Magazine</h6></div>
     </div>
     
 </section>
 
+
+
 <section id="services" class="services">
     <div class="container">
-        <h2>Our Services</h2>
-        <div class="container2">
-            <div class="box"><img src="images/vault.png"><h3>MULTISIG WALLET SETUP</h3><p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p></div>
-            <div class="box"><img src="images/helper.png"><h3>SECURITY CONSULTATION</h3><p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p></div>
-            <div class="box"><img src="images/lock.png"><h3>SIGNING KEY</h3><p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p></div>
+        <div class="box">
+            <div class="image-container">
+                <img src="images/multisig.jpg" alt="Multisig Wallet Setup">
+            </div>
+            <h3>MULTISIG WALLET SETUP</h3>
+            <p>Our team assists in setting up a robust multisig wallet for your bitcoin holdings, ensuring enhanced security and protection against unauthorized access.</p>
+        </div>
+        <div class="box">
+            <div class="image-container">
+                <img src="images/consult.jpg" alt="Security Consultation">
+            </div>
+            <h3>SECURITY CONSULTATION</h3>
+            <p>We offer comprehensive security consultation services to help you understand the benefits of multisig and how it can enhance the security of your bitcoin holdings.</p>
+        </div>
+        <div class="box">
+            <div class="image-container">
+                <img src="images/signing.jpg" alt="Signing Key">
+            </div>
+            <h3>SIGNING KEY</h3>
+            <p>Customers may sign up for our Rothbard signature, which they can include in their multisig to prepare for times when they need to fall back on it.</p>
         </div>
     </div>
 </section>
 
+
+
+
+
 <section id="quote" class="quote">
     <div class="container">
-        <h2>“There can be no truly moral choice unless that choice is made in freedom.” <br><br> - Murray Rothbard</h2>
+        <img src="images/quote1.png" class="quotation">
+        <h2>There can be no truly moral choice unless that choice is made in freedom.</h2>
+        <img src="images/quote2.png" class="quotation">
+        <h2>-Murray Rothbard</h2>
     </div>
 </section>
 
