--- a/landing.html
+++ b/landing.html
@@ -38,17 +38,17 @@
 </header>
 
 <section id="coming-soon" class="coming-soon">
-    <div class="overlay"></div>
     <div class="content">
 
         <h1>Join the waitlist!</h1>
-        <p>Get updates for when we launch and earn 80% off your first 3 months</p>
+        <p>Get updates for when we launch and <span>earn 80% off your first 3 months</span></p>
 
         <form id="signup-form">
             <input type="email" placeholder="Enter your email" id="email" name="email" required="" class="input">
             <button type="submit" class="btn">Sign Up</button>
         </form>
     </div>
+    <img src="images/landing.jpg">
 </section>
 
 <footer id="footer">
