--- a/index.html
+++ b/index.html
@@ -114,7 +114,32 @@
 </section>
 
 
-
+<section class="sliding">
+    <h1><span>Customer</span> Testimonials</h1>
+    <div class="logos">
+        <div class="logos-slide">
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+          <div class="container"><h2>...</h2></div>
+        </div>
+  
+        <div class="logos-slide">
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>...</h2></div>
+            <div class="container"><h2>Coming</h2><h2></h2> Soon</h2></div>
+        </div>
+    </div>
+</section>
 
 
 <section id="quote" class="quote">
