--- a/index.html
+++ b/index.html
@@ -115,28 +115,15 @@
 
 
 <section class="sliding">
-    <h1><span>Customer</span> Testimonials</h1>
     <div class="logos">
         <div class="logos-slide">
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
-          <div class="container"><h2>...</h2></div>
+            <h1>Secure your <span>future</span> with <span>Bitcoin.</span></h1>
+            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard</span></h1>
         </div>
   
         <div class="logos-slide">
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>...</h2></div>
-            <div class="container"><h2>Coming</h2><h2></h2> Soon</h2></div>
+            <h1>Secure your <span>future</span> with <span>Bitcoin.</span></h1>
+            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard</span></h1>
         </div>
     </div>
 </section>
