--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     <div class="logos">
         <div class="logos-slide">
             <h1>Secure your <span>future</span> with <span>Bitcoin.</span></h1>
-            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard</span></h1>
+            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard.</span></h1>
         </div>
   
         <div class="logos-slide">
             <h1>Secure your <span>future</span> with <span>Bitcoin.</span></h1>
-            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard</span></h1>
+            <h1>Secure your <span>Bitcoin</span> with <span>Rothbard.</span></h1>
         </div>
     </div>
 </section>
